# nomos

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  historical-startup-notes.md  nomos.md  nomos.nomos
ArgosCI/: config.json
docs/superpowers/plans/: 2026-06-19-parser-bug-fixes.md  2026-07-08-lsp-default-kind-tags.md  2026-07-08-lsp-tags-completion-fixes.md  2026-07-09-update-readme.md
docs/superpowers/specs/: 2026-06-19-parser-bug-fixes-design.md  2026-07-08-lsp-default-kind-tags.md  2026-07-08-lsp-tags-completion-design.md
examples/: config.json  git_config.toml  highlights.scm  nomos.json  nvim_lsp.lua
spec/: v0.md  v1.md  v2.md
src/: error.rs  lib.rs  nomos.rs  notes.rs  tags.rs  task.rs  utils.rs  version.rs
src/lsp/: capabilities.rs  mod.rs  rpc.rs  transport.rs
src/nomos/: mod.rs  utils.rs
src/parser/: file.rs
src/task/: mod.rs  utils.rs  validate.rs
src/utils/: mod.rs  substitute_at_ln.sh
tree-sitter/: .editorconfig  CMakeLists.txt  Cargo.toml  Deep Dive_ Tree-sitter grammar.js.md  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-nomos.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-nomos.h
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_nomos/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterNomosTests/: TreeSitterNomosTests.swift
tree-sitter/src/: grammar.json  node-types.json  parser.c
