[package]
name = "nomos"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/Xqhare/nomos"
authors = ["Xqhare"]
license = "MIT"

[dependencies]

# Error handling
nemesis = { git = "https://github.com/xqhare/nemesis.git" }

# Working with `.json` or `.csv` files
mawu = { git = "https://github.com/xqhare/mawu.git" }

# Time and date library (easily integrates with `XffValue`)
horae = { git = "https://github.com/xqhare/horae.git" }

athena = { git = "https://github.com/xqhare/athena.git", features = ["sorting"] }

